--- a/index.css
+++ b/index.css
@@ -48,17 +48,19 @@ h2{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border:0.1vw solid blue;
+    border-style: solid;
+    border-right:0vw;
+    border-left:0vw;
     padding:2vw;
     margin: 2vw;
-    border-radius:2vw;
     row-gap:1vw;
+    padding-bottom:4vw;
 }
 
 .entrada_link{
     width:50%;
     border-radius:2vw;
-    border:0.2vw solid rgba(0, 0, 255, 0.638);
+    border:0.4vw solid rgb(140, 255, 57);
     text-align: center;
     padding:0.5vw;
     color: rgb(0, 0, 255);
@@ -68,8 +70,8 @@ h2{
 #btnsubir{
     width:10%;
     border-radius:2vw;
-    border:0.2vw solid rgba(17, 0, 255, 0.735);
-    background-color: rgba(17, 0, 255, 0.735);
+    border:0.2vw solid rgb(0, 106, 255);
+    background-color: rgb(0, 106, 255);
     color: white;
     text-align: center;
     padding:0.5vw;
@@ -77,10 +79,9 @@ h2{
 }
 
 #btnsubir:hover{
-    width:11%;
     border-radius:2vw;
-    border:0.2vw solid rgba(0, 255, 26, 0.735);
-    background-color: rgba(0, 255, 26, 0.735);
+    border:0.2vw solid rgb(0, 60, 255);
+    background-color: rgb(0, 4, 255);
     color: white;
     text-align: center;
     padding:0.5vw;
@@ -91,15 +92,15 @@ h2{
     display:flex;
     flex-wrap: wrap;
     flex-direction: row;
-    border:0.1vw solid rgba(17, 0, 255, 0.735);
     border-radius:2vw;
     padding:2vw;
     row-gap:2vw;
     column-gap:2vw;
+    justify-content: center;
 }
 
 .cards{
-    border:0.1vw solid red;
+    border:0.3vw solid rgba(0, 0, 0, 0.427);
     border-radius:1vw;
     width:10vw;
     height:26vw;
@@ -156,13 +157,21 @@ h2{
 }
 
 .btndetalles{
-    background-color: rgba(140, 134, 134, 0.28);
-    border:0.1vw solid rgb(91, 89, 89);
+    background-color: rgba(255, 182, 57, 0.631);
+    border:0.1vw solid rgba(255, 182, 57, 0.631);
 }
 
 .btndetalles:hover{
-    background-color: grey;
+    background-color: rgb(255, 182, 57);
+}
 
+.btneditar{
+    background-color: rgba(0, 255, 13, 0.489);
+    border:0.1vw solid rgba(0, 255, 13, 0.489);
+}
+
+.btneditar:hover{
+    background-color:rgba(0, 255, 13, 0.804);
 }
 
 .card_detalles {
@@ -263,13 +272,14 @@ h2{
 }
 
 .editar_card input {
-    width: 100%;
+    width: 90%;
     padding: 0.5vw;
     border-radius: 2vw;
-    border: 0.2vw solid rgba(0, 0, 255, 0.638);
+    border:0.4vw solid rgb(140, 255, 57);
     font-size: 1.5vw;
     color: rgb(0, 0, 255);
     margin-bottom: 1vw;
+    text-align: center;
 }
 
 #guardar_edicion{
